# chatgpt-doc-translator

./: .gitignore  Dockerfile  README.md  pyproject.toml
models/: api.py  models.py
server/: main.py
services/: file.py  split_text.py  translate.py
services/utils/: generate_pdf.py  interact_llm.py  process_file.py  save_as_file.py  split_text.py
